--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pinia": "^2.0.33",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
+    "vue-boring-avatars": "^1.4.0",
     "vue-router": "^4.0.0",
     "vuetify": "^3.0.0",
     "webfontloader": "^1.0.0"
