--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.8.3",
     "dotenv": "^16.0.3",
     "ethers": "^6.2.3",
+    "idb": "^8.0.0",
     "pinia": "^2.0.33",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
